添加自定义字体

--- a/News/News/Info.plist
+++ b/News/News/Info.plist
@@ -32,5 +32,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>HYQiHei-50J.ttf</string>
+	</array>
 </dict>
 </plist>
